objects/TestObject__c.object
<CustomObject>
    <description>TestObject</description>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Maestro_External_Id__c</fullName>
        <description>External Id Field for Maestro Data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id Field for Maestro Data migration</inlineHelpText>
        <label>Maestro External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_Multi_Select__c</fullName>
        <label>Picklist (Multi-Select)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
                <value>
                    <fullName>Option 4</fullName>
                </value>
                <value>
                    <fullName>Option 5</fullName>
                </value>
                <value>
                    <fullName>Option 6</fullName>
                </value>
                <value>
                    <fullName>Option 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
                <value>
                    <fullName>Option 4</fullName>
                </value>
                <value>
                    <fullName>Option 5</fullName>
                </value>
                <value>
                    <fullName>Option 6</fullName>
                </value>
                <value>
                    <fullName>Option 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Area_Long__c</fullName>
        <label>Text Area Long</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_Rich__c</fullName>
        <label>Text Area Rich</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>TestObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>